--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-formatic": "^2.3.1",
     "react-inlinesvg": "^4.1.3",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
