--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-formatic": "^2.3.1",
+    "react-icons": "^5.5.0",
     "react-inlinesvg": "^4.1.3",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
